fix menu navigation on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1837,7 +1837,6 @@ header.style-3 #menu > a {
 }
 
 #menu > ul {
-	width: 100%;
 	right:0;
 	top: 50px;
 }
